--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,12 +9,14 @@ spring:
       url: jdbc:mysql://localhost:3306/reggie?serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&useSSL=false&allowPublicKeyRetrieval=true
       username: root
       password: 123456
-
   redis:
-    host: 127.0.0.1
+    host: localhost
     port: 6379
-    password:  root@123456
     database: 0
+  cache:
+     redis:
+       time-to-live: 1800000 #设置缓存过期时间
+
 
 mybatis-plus:
   configuration:
